syntax = "proto3";

package rpc_transports;

message ReadReqHeader {
  int32 buf_count = 1;
  int32 buf_size = 2;
}

message WriteReqHeader {
  int32 buf_count = 1;
  int32 buf_size = 2;
}

message EchoReqHeader {
  int32 buf_count = 1;
  int32 buf_size = 2;
}

message ReadRspHeader {
  uint64 msg_process_time_us = 1;
}

message WriteRspHeader {
  uint64 msg_process_time_us = 1;
}

message EchoRspHeader {
  uint64 msg_process_time_us = 1;
}

message Header {
  oneof hdr {
    ReadReqHeader r_req_hdr = 1;
    WriteReqHeader w_req_hdr = 2;
    ReadRspHeader r_rsp_hdr = 3;
    WriteRspHeader w_rsp_hdr = 4;
    EchoReqHeader e_req_hdr = 5;
    EchoRspHeader e_rsp_hdr = 6;
  }
}

message Data {
  bytes data = 1;
}

message Payload {
  oneof payload {
    Header hdr = 1;
    Data data = 2;
  }
}
